<resources>
    <string name="app_name">拍牌宝</string>

    <string name="action_settings">设置</string>

    <string name="tab_home">首页</string>
    <string name="tab_favourable">优惠</string>
    <string name="tab_discover">发现</string>
    <string name="tab_mine">我的</string>

    <string name="forecast_transaction_price">预测最终成交价：</string>
    <string name="current_status">目前拍卖状态</string>
    <string name="limitation">投放额度数：</string>
    <string name="current_people_number">目前已投标人数：</string>
    <string name="server_time">目前系统时间：</string>
    <string name="current_transaction_price">目前最低成交价：</string>

    <string name="auction">拍牌</string>
    <string name="sale_car">买车</string>
    <string name="fix_car">修车</string>
    <string name="analysis_data">数据分析</string>
    <string name="history_data">历史数据</string>

    <string name="date">日期</string>
    <string name="limiation">投放额度</string>
    <string name="people_num">投标人数</string>
    <string name="min_price">最低成交价</string>
    <string name="average_price">平均成交价</string>
    <string name="caution_price">警示价</string>
    <string name="data_detail">详细价格变化</string>
    <string name="auction_over">拍牌已经结束</string>
    <string name="auction_unstart">拍牌未开始</string>
    <string name="request_fails">请求失败</string>
    <string name="announcement">信息公告</string>
    <string name="more">更多</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="input_verification_code">请输入您的验证码</string>
    <string name="confirm_password">请再输入一次密码</string>
    <string name="input_password">请输入6-20位密码</string>
    <string name="sign_up">注册</string>
    <string name="verification_error">验证码输入不正确</string>
    <string name="confirm_password_error">两次密码输入不相同</string>
    <string name="warning_phone_number">请输入11位手机号码</string>
    <string name="warning_registered">此手机号码已经被注册</string>
    <string name="warning_have_not_registered">此手机号码未被注册</string>
    <string name="warning_get_verification_code">您获取验证码过于频繁，请过会再试</string>
    <string name="password_invalid">密码不合法</string>
    <string name="send_success">发送成功</string>
    <string name="register_success">注册成功</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="have_car_question">您现在有车吗？</string>
    <string name="have_car">有车</string>
    <string name="no_car">没有车</string>
    <string name="please_add_car">请添加您的车</string>
    <string name="add">添加</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="purchase_info">购车信息</string>
    <string name="skip">跳过</string>
    <string name="intent_quest">您希望购买的车系</string>
    <string name="wrong_phone_password">登录帐号或者密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="delete">删除</string>
    <string name="user_info">用户信息</string>
    <string name="sign_in_everyday">每日签到</string>
    <string name="activity">活动</string>
    <string name="avatar">头像</string>
    <string name="username">用户名</string>
    <string name="phone_number">手机号</string>
    <string name="log_out">注销</string>
    <string name="frequency_strategy">激进策略</string>
    <string name="average_strategy">普通策略</string>
    <string name="feedback_hint">请输入您遇到的问题，我们会在以后的版本中做出改进，谢谢！</string>
    <string name="alert_feedback_content">意见内容不能为空！</string>
    <string name="has_not_registered">此手机号码未被注册</string>
    <string name="current_point">当前积分：</string>
    <string name="sign_in">签到</string>
    <string name="signed_in_today">今日已签到</string>
    <string name="feedback">意见反馈</string>
    <string name="sign_in_tip">今日已成功签到，获得%1$d积分，明天签到可获得%2$d积分</string>
    <string name="price_detail">详细价格变化</string>
    <string name="user_name">用户名</string>
    <string name="done">完成</string>
    <string name="set_user_info">设置用户信息</string>
    <string name="warning_input_empty">输入不能为空</string>
    <string name="warning_no_change">未发现变化</string>
    <string name="warning_unsupport_feature">您的设备不支持这项功能</string>
    <string name="break_rule_video">违章视频(beta)</string>
    <string name="record_break_rule">录制违章</string>
    <string name="upload">上传</string>
    <string name="edit_video">编辑视频</string>
    <string name="record_video_failed">录制视频失败</string>
    <string name="upload_succeed">上传成功</string>
    <string name="warning_empty_input">输入不能为空</string>
    <string name="uploading">上传中...</string>

    <string-array name="history_type">
        <item>投放额度</item>
        <item>投标人数</item>
        <item>最低成交价</item>
        <item>平均成交价</item>
        <item>警示价</item>
    </string-array>

    <string-array name="dates">
        <item>201609</item>
        <item>201608</item>
        <item>201607</item>
        <item>201606</item>
        <item>201605</item>
        <item>201604</item>
        <item>201603</item>
        <item>201602</item>
        <item>201601</item>
        <item>201512</item>
        <item>201511</item>
        <item>201510</item>
        <item>201509</item>
        <item>201508</item>
        <item>201507</item>
        <item>201506</item>
        <item>201505</item>
        <item>201504</item>
        <item>201503</item>
        <item>201502</item>
        <item>201501</item>
    </string-array>

    <string-array name="car_style">
        <item>德系</item>
        <item>日系</item>
        <item>美系</item>
        <item>国产</item>
        <item>其他</item>
    </string-array>

    <string-array name="car_age">
        <item>一年以内</item>
        <item>一年</item>
        <item>两年</item>
        <item>三年</item>
        <item>四年</item>
        <item>五年</item>
        <item>六年</item>
        <item>六年以上</item>
    </string-array>

    <string-array name="strategy_types">
        <item>29分00秒</item>
        <item>29分10秒</item>
        <item>29分20秒</item>
        <item>29分30秒</item>
        <item>29分40秒</item>
        <item>29分43秒</item>
        <item>29分45秒</item>
        <item>29分48秒</item>
        <item>29分50秒</item>
    </string-array>

    <string name="menuItem_settings">Settings</string>

    <string name="prefCategory_title_camera">Camera settings</string>
    <string name="pref_title_cameraResolution">Camera resolution</string>
    <string-array name="pref_entries_cameraResolution">
        <item>320x240   (4:3)</item>
    </string-array>
    <string-array name="pref_entryValues_cameraResolution">
        <item>320x240</item>
    </string-array>
    <string name="pref_defaultValue_cameraResolution">320x240</string>

    <string name="pref_title_cameraIndex">Change camera</string>
    <string-array name="pref_entries_cameraIndex">
        <item>Rear camera</item>
    </string-array>
    <string-array name="pref_entryValues_cameraIndex">
        <item>0</item>
    </string-array>
</resources>
