<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/home_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--todo this viewpager height should it image height , not a fixed height-->
            <android.support.v4.view.ViewPager
                android:id="@+id/home_view_pager"
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="3dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/auction_idle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/round_rectangle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="4"
                        android:text="@string/auction"
                        android:textColor="@color/white"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/auction_idle_status"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="3"
                        android:textSize="20sp"
                        android:text="离7月拍牌\n20天"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/auction_ready"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@color/home_title_background"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:text="@string/auction"
                        android:textColor="@color/white"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/auction_ready_status"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="离 月拍牌\n  天"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/auction_ready_forecast"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="85200-85400"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/history_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="#00ff00"
                    android:gravity="center"
                    android:text="@string/history_data"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/announcement"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>